[project]
name = "zcash-developer-tools"
version = "0.1.0"
dependencies = [
  "drest",
  "networkx",
  "pygraphviz",
  "sgqlc",
  "str2bool",
]
requires-python = ">= 3.8"
authors = [
  {name = "Jack Grigg", email = "jack@electriccoin.co"},
]
description = "Zcash Developer Tools"
readme = "README.md"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Private :: Do Not Upload",
]

[project.urls]
Homepage = "https://github.com/zcash/developers"
Documentation = "https://github.com/zcash/developers"
Repository = "https://github.com/zcash/developers.git"

